fix package dependency: update agent to pantheon
- replaces outdated agent dependency with pantheon
- ensures alignment with current architecture and services

--- a/packages/discord/package.json
+++ b/packages/discord/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@discordjs/voice": "^0.18.0",
-    "@promethean-os/agent": "workspace:*",
+    "@promethean-os/pantheon": "workspace:*",
     "@promethean-os/effects": "workspace:*",
     "@promethean-os/embedding": "workspace:*",
     "@promethean-os/event": "workspace:*",
