--- a/packages/autocommit/package.json
+++ b/packages/autocommit/package.json
@@ -2,6 +2,10 @@
   "name": "@promethean-os/autocommit",
   "version": "0.1.0",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/riatzukiza/autocommit.git"
+  },
   "license": "GPL-3.0-or-later",
   "publishConfig": {
     "access": "public"
