--- a/packages/kanban/package.json
+++ b/packages/kanban/package.json
@@ -17,8 +17,7 @@
   "license": "GPL-3.0-only",
   "repository": {
     "type": "git",
-    "url": "https://github.com/riatzukiza/promethean.git",
-    "directory": "packages/kanban"
+    "url": "https://github.com/riatzukiza/kanban.git"
   },
   "bugs": {
     "url": "https://github.com/riatzukiza/promethean/issues"
