--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -66,5 +66,9 @@
     "rimraf": "6.0.1",
     "tsx": "4.19.2"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/riatzukiza/mcp.git"
+  },
   "license": "GPL-3.0-only"
 }
