--- a/packages/embedding/tsconfig.json
+++ b/packages/embedding/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../../config/tsconfig.base.json",
+  "extends": "../../config/tsconfig.base.json",
   "compilerOptions": {
     "target": "ES2022",
     "module": "ESNext",
@@ -16,7 +16,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "baseUrl": "../../../",
+    "baseUrl": "../../",
     "paths": {
       "@promethean/platform": ["packages/platform"],
       "@promethean/platform/*": ["packages/platform/*"],
@@ -25,5 +25,5 @@
     }
   },
   "include": ["src/**/*"],
-  "references": [{ "path": "../../platform" }, { "path": "../../utils" }]
+  "references": [{ "path": "../platform" }, { "path": "../utils" }]
 }
