--- a/packages/fs/tsconfig.json
+++ b/packages/fs/tsconfig.json
@@ -9,10 +9,10 @@
     "include": ["src/**/*"],
     "references": [
         {
-            "path": "../../stream"
+            "path": "../stream"
         },
         {
-            "path": "../../ds"
+            "path": "../ds"
         }
     ]
 }
