--- a/packages/persistence/tsconfig.json
+++ b/packages/persistence/tsconfig.json
@@ -9,7 +9,7 @@
     "include": ["src/**/*"],
     "references": [
         {
-            "path": "../ai/embedding"
+            "path": "../embedding"
         }
     ]
 }
