fix: update binary paths to use direct module references instead of p...
- replace pnpm-linked module paths with direct module references in all tool binaries
- simplify path resolution by using relative paths from package root
- ensure consistent behavior across all tooling (ts-node, tsc, tsserver, js-yaml, etc.)
- update legacy script paths to point to @promethean-os packages where applicable

--- a/packages/pipelines/piper/tsconfig.json
+++ b/packages/pipelines/piper/tsconfig.json
@@ -8,7 +8,7 @@
   },
   "include": ["src/**/*"],
   "references": [
-    { "path": "../../file-system/fs" },
+    { "path": "../../fs" },
     { "path": "../../level-cache" },
     { "path": "../../ui-components" }
   ]
