--- a/packages/markdown/tsconfig.json
+++ b/packages/markdown/tsconfig.json
@@ -12,7 +12,7 @@
     "include": ["src/**/*"],
     "references": [
         {
-            "path": "../file-system/fs"
+            "path": "../fs"
         }
     ]
 }
